Тесты на новый функционал